# kerf-adjuster

./: .eslintrc.json  .gitignore  README.md  asset-manifest.json  config-overrides.js  example_dxf.DXF  example_dxf2.DXF  index.html  manifest.json  package-lock.json  package.json
kerf-adjuster-logic/: Cargo.toml
kerf-adjuster-logic/src/: contour.rs  errors.rs  lib.rs  main.rs
kerf-adjuster-logic/tests/: adjust_kerf.rs
public/: index.html
src/: index.css  index.tsx  serviceWorker.ts
src/app/: App.scss  App.tsx
src/app/components/dxf-display-area/: dxf-display-area.module.scss  dxf-display-area.tsx
src/app/components/dxf-editor/: dxf-editor.module.scss  dxf-editor.scss  dxf-editor.tsx
src/app/components/file-selector-pane/: dxf-editor.tsx  file-selector-pane.scss  file-selector-pane.tsx
src/app/components/file-viewing-pane/: dxf-display-area.tsx  file-viewing-pane.tsx
src/app/components/navbar/: navbar.tsx
src/app/components/placeholder-offset/: placeholder-offset.module.scss  placeholder-offset.scss  placeholder-offset.tsx
src/app/context/: file-context.tsx
static/css/: main.c77240fb.chunk.css  main.c77240fb.chunk.css.map
static/js/: 2.58944296.chunk.js  2.58944296.chunk.js.map  3.f9e21f1f.chunk.js  3.f9e21f1f.chunk.js.map  main.229347e0.chunk.js  main.229347e0.chunk.js.map  main.eb028fa7.chunk.js  main.eb028fa7.chunk.js.map  runtime-main.71d14281.js  runtime-main.71d14281.js.map
