[package]
name = "kerf-adjuster-logic"
version = "0.1.0"
authors = ["Ritik Mishra <ritik.mishra314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dxf = { git = "https://github.com/ixmilia/dxf-rs.git", branch = "main"}
nalgebra = "0.24"
