[package]
name = "kerfadjusterlogic"
version = "0.1.0"
authors = ["Ritik Mishra <ritik.mishra314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "lib"]

# [features]
# default = ["wee_alloc"]

[profile.dev]
# One of the generated functions in dxf crate is 1000 lines 
# Unoptimized, it uses over 50k WASM locals when compiled
# This throws an error in wasm-pack.
# As a result, we need a little optimization to make it not break.
opt-level = 1

# incremental makes it go wayy faster when developing with webpack
incremental = true

[profile.release]
lto = true
opt-level = "z"

[dependencies]
dxf = "0.4"
nalgebra = "0.24"
wasm-bindgen = "0.2.45"
uuid = { version = "*", features = ["wasm-bindgen"] }
chrono = { version = "*", features = ["wasmbind"] }

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook= "0.1.5"

[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
